[gd_scene load_steps=15 format=3 uid="uid://dr1ox7pslxj56"]

[ext_resource type="MeshLibrary" uid="uid://sbwui5c5iiba" path="res://mesh_libraries/meshlib.tres" id="1_882mu"]
[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_au1ve"]
[ext_resource type="PackedScene" uid="uid://dtm4ycc6nit3v" path="res://scenes/levels/props/flashing_light.tscn" id="2_dktbw"]
[ext_resource type="PackedScene" uid="uid://c5gvq6lkofkvo" path="res://scenes/player.tscn" id="3_jeg0v"]
[ext_resource type="PackedScene" uid="uid://bhc1p4wwr4ykv" path="res://scenes/monster.tscn" id="4_ecycj"]
[ext_resource type="PackedScene" uid="uid://cyysgbygwky06" path="res://scenes/levels/props/stairs.tscn" id="5_6h4k3"]
[ext_resource type="Script" path="res://scenes/GameManager.gd" id="6_jpp88"]
[ext_resource type="Script" path="res://scenes/ui/UI.gd" id="7_dlwnu"]
[ext_resource type="PackedScene" uid="uid://dk8xrxb7gaij7" path="res://scenes/ui/win_screen.tscn" id="8_sy4rm"]
[ext_resource type="PackedScene" uid="uid://jub4rmako3cu" path="res://scenes/ui/lose_screen.tscn" id="9_vlc2t"]

[sub_resource type="NavigationMesh" id="NavigationMesh_thhcc"]
agent_height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ds04y"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_oji7f"]
material = SubResource("StandardMaterial3D_ds04y")

[sub_resource type="Environment" id="Environment_racut"]
background_mode = 1
background_color = Color(0.0352941, 0.0352941, 0.0352941, 1)
glow_blend_mode = 1
glow_hdr_threshold = 0.5

[node name="Level" type="Node3D"]
script = ExtResource("1_au1ve")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_thhcc")

[node name="GridMap" type="GridMap" parent="NavigationRegion3D"]
mesh_library = ExtResource("1_882mu")
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="LightsContainer" type="Node" parent="NavigationRegion3D/GridMap"]

[node name="FlashingLight" parent="NavigationRegion3D/GridMap/LightsContainer" instance=ExtResource("2_dktbw")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 37, 3.9, 37)

[node name="SpotLight3D" type="SpotLight3D" parent="NavigationRegion3D/GridMap/LightsContainer"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1, 4.5, 2)
light_energy = 3.0

[node name="Ceiling" type="MeshInstance3D" parent="."]
transform = Transform3D(40, 0, 0, 0, 1, 0, 0, 0, 40, 19, 4.5, 19)
visible = false
mesh = SubResource("BoxMesh_oji7f")
skeleton = NodePath("")

[node name="Player" parent="." instance=ExtResource("3_jeg0v")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 1, 1, 1)

[node name="Monster" parent="." instance=ExtResource("4_ecycj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 37, 1, 37)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_racut")

[node name="Stairs" parent="." instance=ExtResource("5_6h4k3")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 37, 1, 37)

[node name="GameManager" type="Node" parent="."]
script = ExtResource("6_jpp88")

[node name="UI" type="Node" parent="."]
process_mode = 3
script = ExtResource("7_dlwnu")

[node name="WinScreen" parent="UI" instance=ExtResource("8_sy4rm")]
process_mode = 2
visible = false
mouse_filter = 1

[node name="TransitionLoseScreen" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.360784)

[node name="LoseScreen" parent="UI" instance=ExtResource("9_vlc2t")]
process_mode = 2
visible = false

[connection signal="stairs_found" from="Player" to="GameManager" method="_on_player_stairs_found"]
[connection signal="player_hit" from="Monster" to="Player" method="_on_monster_player_hit"]
[connection signal="player_hit" from="Monster" to="GameManager" method="_on_monster_player_hit"]
[connection signal="player_lost" from="GameManager" to="UI" method="_on_game_manager_player_lost"]
[connection signal="player_won" from="GameManager" to="GameManager" method="_on_player_won"]
[connection signal="player_won" from="GameManager" to="UI" method="_on_game_manager_player_won"]
[connection signal="continue_button_pressed" from="UI/WinScreen" to="GameManager" method="_on_win_screen_continue_button_pressed"]
[connection signal="give_up_button_pressed" from="UI/WinScreen" to="GameManager" method="_on_give_up_button_pressed"]
[connection signal="give_up_button_pressed" from="UI/LoseScreen" to="GameManager" method="_on_give_up_button_pressed"]
